--- a/elements.css
+++ b/elements.css
@@ -107,12 +107,489 @@
 /* CONTENT */
 /* CONTENT */
 /* CONTENT */
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+fonts,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  outline: 0;
+}
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
+}
+html {
+  height: 100%;
+}
+body {
+  font-size: 14px;
+  font-family: 'Lato', sans-serif;
+  height: 100%;
+  font-smoothing: antialiased;
+  -moz-font-smoothing: antialiased;
+  -webkit-font-smoothing: antialiased;
+  -webkit-font-smoothing: subpixel-antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  background: #f4f4f4;
+  overflow-x: hidden;
+  color: #2f2f2f;
+}
+a {
+  text-decoration: none;
+}
+:hover {
+  -webkit-transition: all 0.3s ease;
+  -moz-transition: all 0.3s ease;
+  -ms-transition: all0.3s ease;
+  -o-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+button {
+  cursor: pointer;
+}
+textarea,
+input {
+  font-family: 'Lato', sans-serif;
+}
+#page {
+  display: inline-block;
+  margin: auto;
+  width: 100%;
+  min-height: 100%;
+}
+.content {
+  width: 98%;
+  margin: auto;
+  display: block;
+}
+label[for="trigger"] {
+  position: absolute;
+  left: 10px;
+  top: 5px;
+  font-size: 30px;
+  cursor: pointer;
+  z-index: 2;
+  color: #ffffff;
+}
+.trigger {
+  position: absolute;
+  clip: rect(0, 0, 0, 0);
+}
+.trigger + label[for="trigger"],
+section#main-content {
+  transition: left 0.2s;
+}
+.trigger:checked + label[for="trigger"] {
+  left: 210px;
+  -webkit-transform: rotate(90deg);
+  -moz-transform: rotate(90deg);
+  -o-transform: rotate(90deg);
+}
+.trigger:checked ~ section#main-content {
+  left: 200px;
+}
+.trigger:checked ~ section#navigation {
+  display: inline-block;
+}
+section#navigation {
+  width: 200px;
+  height: 100%;
+  position: fixed;
+  display: none;
+}
+section#navigation #wrapper {
+  width: 100%;
+  height: 100%;
+}
+section#navigation .user {
+  padding: 10px 20px 10px;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  color: #ffffff;
+  text-align: center;
+}
+section#navigation .user span {
+  font-size: 12px;
+  font-weight: 300;
+  display: block;
+}
+section#navigation .user span.name {
+  font-size: 14px;
+  font-weight: 600;
+  margin-bottom: 5px;
+}
+section#navigation .user span.name a {
+  text-decoration: none;
+  color: #ffffff;
+}
+section#navigation .user span.name a:hover {
+  color: rgba(255, 255, 255, 0.5);
+}
+section#navigation .user .images {
+  display: inline-block;
+  width: 80px;
+  height: 80px;
+  border-radius: 100%;
+  -moz-border-radius: 100%;
+  -webkit-border-radius: 100%;
+  -o-border-radius: 100%;
+  background: #ffffff;
+  margin: 10px auto;
+  padding: 3px;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+section#navigation .user .images img {
+  width: 100%;
+  height: auto;
+  float: left;
+  border-radius: 100%;
+  -moz-border-radius: 100%;
+  -webkit-border-radius: 100%;
+  -o-border-radius: 100%;
+}
+section#navigation nav {
+  float: left;
+  width: 100%;
+  margin: 10px 0;
+}
+section#navigation nav ul {
+  float: left;
+  width: 100%;
+}
+section#navigation nav ul li {
+  display: block;
+  width: 100%;
+  position: relative;
+}
+section#navigation nav ul li:hover:before {
+  content: '';
+  display: inline-block;
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 5px 5px 5px 0;
+  border-color: transparent #FFF transparent transparent;
+  position: absolute;
+  top: 35%;
+  right: 0;
+}
+section#navigation nav ul .active:before {
+  content: '';
+  display: inline-block;
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 5px 5px 5px 0;
+  border-color: transparent #FFF transparent transparent;
+  position: absolute;
+  top: 35%;
+  right: 0;
+}
+section#navigation nav a {
+  color: #ffffff;
+  text-decoration: none;
+  display: inline-block;
+  text-transform: uppercase;
+  font-size: 13px;
+  font-weight: 600;
+  width: 100%;
+  padding: 10px 20px;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+section#navigation nav a i {
+  margin-right: 10px;
+}
+section#navigation .footer {
+  background: #004579;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  padding: 7px 20px;
+  width: 100%;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  color: rgba(255, 255, 255, 0.5);
+  font-size: 10px;
+  font-weight: 300;
+}
+section#navigation .footer a {
+  color: rgba(255, 255, 255, 0.5);
+  text-decoration: none;
+}
+section#navigation .footer a:hover {
+  color: #ffffff;
+}
+@media only screen and (max-width: 480px) and (orientation: landscape) {
+  section#navigation .footer {
+    display: none;
+  }
+}
+section#main-content {
+  background: #f4f4f2;
+  position: relative;
+  top: 0;
+  bottom: 100%;
+  left: 0;
+  z-index: 1;
+  height: 100%;
+  padding-bottom: 20px;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+section#main-content .rows {
+  float: left;
+  width: 100%;
+  margin: 10px 0;
+}
+section#main-content .rows h3 {
+  float: left;
+  width: 100%;
+  display: block;
+  margin-bottom: 10px;
+}
+section#main-content .row {
+  float: left;
+  width: 100%;
+}
+@media only screen and (min-width: 320px) and (max-width: 992px) {
+  section#main-content {
+    height: auto;
+  }
+}
+#title {
+  width: 100%;
+  margin: auto;
+  display: table;
+  text-align: center;
+  height: 90px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+  position: relative;
+}
+#title .content {
+  display: table-cell;
+  vertical-align: middle;
+  position: relative;
+  width: 100%;
+}
+#title h2 {
+  color: rgba(255, 255, 255, 0.8);
+  font-size: 25px;
+  font-weight: 400;
+}
+#title nav {
+  border-top: 1px solid rgba(255, 255, 255, 0.1);
+  padding-top: 10px;
+  display: inline-block;
+  width: 100%;
+  margin-top: 10px;
+}
+#title nav ul {
+  float: left;
+  width: 100%;
+}
+#title nav ul li {
+  display: inline-block;
+  margin: 0px 6px;
+  position: relative;
+}
+#title nav ul li:hover:before {
+  content: '';
+  position: absolute;
+  width: 0;
+  height: 0;
+  border-style: solid;
+}
+#title nav ul li:hover:before {
+  bottom: -20px;
+  left: 49%;
+  border-width: 8px 7px 0 7px;
+  z-index: 2;
+}
+#title nav ul .active:before {
+  content: '';
+  position: absolute;
+  width: 0;
+  height: 0;
+  border-style: solid;
+  bottom: -15px;
+  left: 49%;
+  border-width: 0 7px 8px 7px;
+  border-color: transparent transparent #F4F4F4 transparent;
+  z-index: 2;
+}
+#title nav ul .active a.active:before {
+  content: none;
+}
+#title nav a {
+  text-decoration: none;
+  font-weight: 300;
+  font-size: 16px;
+  color: #ffffff;
+}
+#title nav a:hover {
+  color: rgba(255, 255, 255, 0.5);
+}
+#title nav a i {
+  margin-right: 5px;
+}
+#title .action {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+}
+#title .action a {
+  color: rgba(255, 255, 255, 0.8);
+  font-size: 25px;
+  margin-left: 15px;
+  position: relative;
+}
+#title .action a:hover {
+  color: #ffffff;
+}
+#title .action a span {
+  position: absolute;
+  top: -3px;
+  right: -4px;
+  font-size: 12px;
+  width: 20px;
+  height: 20px;
+  border-radius: 100%;
+  -moz-border-radius: 100%;
+  -webkit-border-radius: 100%;
+  -o-border-radius: 100%;
+  color: #ffffff;
+  background: #ff0000;
+  font-weight: 600;
+  line-height: 20px;
+}
+#title.small {
+  height: 50px;
+}
+@media only screen and (max-width: 480px) {
+  #title {
+    height: auto;
+  }
+  #title h2 {
+    padding-top: 12px;
+    font-size: 20px;
+  }
+  #title nav {
+    width: 100%;
+    margin-bottom: 3spx;
+  }
+  #title nav ul {
+    display: table;
+    width: 100%;
+  }
+  #title nav ul li {
+    display: table-cell;
+    width: auto;
+  }
+  #title nav ul li a i {
+    font-size: 26px;
+  }
+  #title nav ul li a span {
+    display: block;
+    width: 100%;
+    font-size: 12px;
+    margin-top: 5px;
+  }
+  #title nav ul li:hover:before,
+  #title nav ul li:hover:after {
+    content: none;
+  }
+  #title nav ul .active:before,
+  #title nav ul .active:after {
+    content: none;
+  }
+  #title .action a {
+    font-size: 22px;
+  }
+  #title .action a span {
+    right: -7px;
+  }
+}
 /* ELEMENTS */
 /* ELEMENTS */
 /* ELEMENTS */
 /* ELEMENTS */
 /* ELEMENTS */
 /* COLUMN */
+.col-9 {
+  width: 98%;
+}
 .col-8 {
   width: 100%;
 }
@@ -134,7 +611,7 @@
   width: 49%;
 }
 .col-2 {
-  width: 32.5%;
+  width: 32.4%;
 }
 .col-1 {
   width: 24.07%;
@@ -189,48 +666,6 @@
   color: #ffffff !important;
 }
 /* BUTTON */
-/* CHECKBOX ON / OFF */
-.switch {
-  position: relative;
-  width: 50px;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-}
-.switch-checkbox {
-  display: none;
-}
-.switch-label {
-  display: block;
-  overflow: hidden;
-  cursor: pointer;
-  height: 24px;
-  padding: 0;
-  line-height: 20px;
-  border: 1px solid #e6e6e6;
-  border-radius: 20px;
-  background-color: #F4F4F4;
-  transition: background-color 0.3s ease-in;
-}
-.switch-label:before {
-  content: "";
-  display: block;
-  width: 20px;
-  height: 20px;
-  margin: 0px;
-  position: absolute;
-  top: 2px;
-  bottom: 0;
-  right: 26px;
-  border: 1px solid #e6e6e6;
-  border-radius: 20px;
-  transition: all 0.3s ease-in 0s;
-  background-color: #b9b9b9;
-}
-.switch-checkbox:checked + .switch-label:before {
-  right: 2px;
-}
-/* CHECKBOX ON / OFF */
 /* WINDOW */
 .window {
   background: #ffffff;
@@ -326,19 +761,19 @@
   font-weight: 300;
   margin-top: -36px;
 }
-.title-window .legend a {
+.title-window .legend a.open {
   text-decoration: none;
   color: #0090ff !important;
   font-size: 14px !important;
 }
-.title-window .legend a:hover {
+.title-window .legend a.open:hover {
   color: #005494;
 }
-.title-window .legend ul.position {
+.title-window .legend .position {
   float: left;
   width: 100%;
   background: #f4f4f4;
-  padding: 8px 10px;
+  padding: 6px 10px 4px;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
@@ -349,22 +784,48 @@
   -webkit-border-radius: 3px;
   -o-border-radius: 3px;
   border: 0;
-  display: none;
+  display: block;
+  position: relative;
 }
-.title-window .legend ul.position li {
-  display: inline;
+.title-window .legend .position .info {
+  position: absolute;
+  right: 5px;
+  top: -22px;
+  color: #0090ff;
+}
+.title-window .legend .position ul {
+  float: left;
+  width: 100%;
+}
+.title-window .legend .position ul li {
+  display: inline-block;
   margin: 5px 10px;
   border: 0;
 }
-.title-window .legend ul.position li:first-child {
+.title-window .legend .position ul li:first-child {
   margin-left: 0;
+  margin-right: 0;
 }
-.title-window .legend span {
-  display: inline-block;
+.title-window .legend .position ul li span.title {
+  width: auto;
+  height: auto;
+  font-weight: 600;
+  border: 0;
+  top: -1px;
+  margin-right: 0;
+}
+.title-window .legend .position ul li span {
+  float: left;
   margin-right: 5px;
   width: 10px;
   height: 10px;
   border: 1px solid #ffffff;
+  top: 3px;
+  position: relative;
+}
+.title-window .legend .position ul li a {
+  float: left;
+  color: #000000;
 }
 @media only screen and (max-width: 768px) {
   .title-window .choose {
@@ -398,26 +859,26 @@
     text-align: center;
     margin-bottom: 5px;
   }
-  .title-window .legend ul.position {
+  .title-window .legend .position {
     padding: 0px 10px;
   }
-  .title-window .legend ul.position li {
-    display: block;
+  .title-window .legend .position ul li {
+    display: inline-block;
     width: 100%;
-    margin: 5px 0;
+    margin: 3px 0;
     text-align: left;
   }
 }
 /* OPEN WINDOW */
 #layer {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.5);
   z-index: 100;
-  display: block;
+  display: none;
 }
 #layer .col {
   min-width: 270px;
@@ -507,7 +968,7 @@
   padding-bottom: 10px !important;
   margin-bottom: 10px;
 }
-#layer #form input {
+#layer #form input[type=text] {
   float: left;
   width: 100%;
   padding: 10px;
@@ -702,7 +1163,89 @@
   -webkit-border-radius: 100%;
   -o-border-radius: 100%;
 }
+@media only screen and (max-width: 480px) {
+  #layer .col {
+    width: 90%;
+  }
+  #layer ul.action li {
+    float: left;
+    width: 100%;
+    padding: 5px 0;
+  }
+}
 /* WINDOW */
+/* CHECKBOX ON / OFF */
+.switch {
+  position: relative;
+  width: 50px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+}
+.switch-checkbox {
+  display: none;
+}
+.switch-label {
+  display: block;
+  overflow: hidden;
+  cursor: pointer;
+  height: 24px;
+  padding: 0;
+  line-height: 20px;
+  border: 1px solid #e6e6e6;
+  border-radius: 20px;
+  background-color: #F4F4F4;
+  transition: background-color 0.3s ease-in;
+}
+.switch-label:before {
+  content: "";
+  display: block;
+  width: 20px;
+  height: 20px;
+  margin: 0px;
+  position: absolute;
+  top: 2px;
+  bottom: 0;
+  right: 26px;
+  border: 1px solid #e6e6e6;
+  border-radius: 20px;
+  transition: all 0.3s ease-in 0s;
+  background-color: #b9b9b9;
+}
+.switch-checkbox:checked + .switch-label:before {
+  right: 2px;
+}
+.checkbox {
+  position: relative;
+  float: left;
+}
+.checkbox label.check {
+  width: 20px!important;
+  height: 20px!important;
+  min-width: 20px !important;
+  cursor: pointer;
+  position: absolute;
+  top: 0;
+  left: 0;
+  border: 1px solid #e6e6e4;
+  border-radius: 5px;
+  margin-right: 0 !important;
+}
+.checkbox label.check:after {
+  content: '\f00c';
+  font-family: FontAwesome;
+  position: absolute;
+  top: 2px;
+  left: 2px;
+  opacity: 0;
+}
+.checkbox input[type=checkbox] {
+  visibility: hidden;
+}
+.checkbox input[type=checkbox]:checked + label:after {
+  opacity: 1;
+}
+/* CHECKBOX ON / OFF */
 /* COLOR */
 .blue .btn {
   background: #0090ff;
